--- a/.env
+++ b/.env
@@ -53,4 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
 #tencent
-TENCENT_MAP_API_KEY ="26JBZ-OE2KI-2A4GF-UJVLF-QFEDH-4XBBX"
+#TENCENT_MAP_API_KEY ="26JBZ-OE2KI-2A4GF-UJVLF-QFEDH-4XBBX"
+TENCENT_MAP_API_KEY ="Z5TBZ-XKBWA-FOFKK-CT6LR-PY4O7-TWB22"
